@@ -1,5 +1,9 @@
 ViTables ChangeLog
 ==================
+** May 12, 2017 **
+Bug fixed: tooltips for link nodes are not shown. Instead a verbose error
+message is logged.
+
 ** May 09, 2017 **
 Bug fixed: if we close the Logger in the current session it won't be opened in 
 future sessions. And if we float the Logger in the current session it will
